# colours_of_red

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
colours_of_red/: __init__.py  dataset.py  features.py  plots.py
colours_of_red/modeling/: predict.py  train.py
colours_of_red/torch/: datasets.py
docs/: mkdocs.yml
docs/docs/: index.md
