[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "colours_of_red"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Edgar A. P. Wright" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"


[tool.ruff]
line-length = 99
src = ["colours_of_red"]
include = ["pyproject.toml", "colours_of_red/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["colours_of_red"]
force-sort-within-sections = true

